Apply slide out animation type to PIP window on show.

applied both times.

Bug: 908337
Test: Open and close a Chrome PIP window twice. Slide out animation is
Change-Id: I617e008070f733184d635486ea3c14b260838c8b
Reviewed-on: https://chromium-review.googlesource.com/c/1350026
Commit-Queue: Eliot Courtney <edcourtney@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611995}
Former-commit-id: 54d566e69be485e27a55c986b0dcee80a78f1dec